--- a/style.css
+++ b/style.css
@@ -10,11 +10,22 @@
 
 @font-face {
   font-family: 'Eina_01';
-  src: url('../fonts/Eina01-Regular.ttf') format('truetype');
+  src: url('../fonts/Eina01-SemiBold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
+
+/* olddarkgreen = #709612
+oldlightgreen = #a0b000
+darkgreen = #86AA01
+lightgreen = #AEDD01 */
+
+body {
+  background-color: #FFF9EB; /* dark gray */
+}
+
+/* python -m http.server 5000 */
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Eina_01', sans-serif;
@@ -23,6 +34,7 @@ h1, h2, h3, h4, h5, h6 {
 p {
   font-family:'Eina_01',sans-serif;
 }
+
 
 /* Active pill */
 .nav-pills .nav-link.active {
